Remove dependency on VAVR